@@ -19,6 +19,8 @@ eggs =
 auto-checkout = *
 
 [sources]
+# Waiting for merge upstream
+django-modeltranslation = git https://github.com/leplatrem/django-modeltranslation.git branch=geotrek
 # Not released on Pypi
 isotoma.recipe.django = git https://github.com/isotoma/isotoma.recipe.django.git rev=bb285b016c7f3ea470c6522acd7fcec97983c0b2
 # Still under development
